# EKF_multicamera

./: .flake8  .gitignore  README.md  analyze_camera_mapping.py  analyze_trampoline_jumps.py  animate_dual_stick_comparison.py  animate_multiview_2d_comparison.py  animate_triangulated_stick_figure.py  batch_run.py  biorbd_fd_to_c3d.py  calibration_qc.py  camera_metrics.py  camera_selection.py  dataset_preview_loader.py  dataset_preview_state.py  dd_analysis.py  dd_presenter.py  environment.vitpose-ekf.yml  environment.yml  explore_2d_keypoints_interactive.py  export_reconstruction_bundle.py  observability_analysis.py  pipeline_gui.py  plot_2d_camera_temporal_exploration.py  plot_3d_posture_snapshots.py  plot_kinematic_comparison.py  plot_triangulated_marker_trajectories.py  plot_triangulation_view_usage.py  preview_bundle.py  preview_navigation.py  pyproject.toml  reconstruction_bundle.py  reconstruction_dataset.py  reconstruction_presenter.py  reconstruction_profiles.json  reconstruction_profiles.py  reconstruction_profiles_Back.json  reconstruction_profiles_SB.json  reconstruction_registry.py  reconstruction_timings.py  (+6 more)
analysis/: __init__.py  analyze_camera_mapping.py  analyze_trampoline_jumps.py  explore_2d_keypoints_interactive.py  plot_2d_camera_temporal_exploration.py  plot_3d_posture_snapshots.py  plot_kinematic_comparison.py  plot_triangulated_marker_trajectories.py  plot_triangulation_view_usage.py
animation/: __init__.py  animate_dual_stick_comparison.py  animate_multiview_2d_comparison.py  animate_triangulated_stick_figure.py
annotation/: annotation_store.py  (+3 more)
(+82 files in other folders)
