[build-system]
requires = [
    "setuptools>=61",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "vitpose-ekf-playground"
version = "0.1.0"
description = "Multi-view pose reconstruction, model building, and EKF-based kinematics utilities."
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "mickaelbegon" },
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "lxml",
    "ezc3d",
]

[project.optional-dependencies]
test = [
    "pytest",
    "black",
    "isort",
    "flake8",
]
full = [
    "opencv-python",
    "pandas",
    "plotly",
]

[tool.setuptools.packages.find]
where = ["."]
include = [
    "analysis",
    "analysis.*",
    "animation",
    "animation.*",
    "camera_tools",
    "camera_tools.*",
    "judging",
    "judging.*",
    "kinematics",
    "kinematics.*",
    "observability",
    "observability.*",
    "preview",
    "preview.*",
    "reconstruction",
    "reconstruction.*",
    "tools",
    "tools.*",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120
